--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@ mais on n’est pas obligé.
 <p>on peut rajouter une div dans une autre</p>
 </div>
 </div>
-<p>Une footnote<span id="fn1" class="footnote" data-pagedown-footnote-number="1" style="white-space: pre-line;">contenu de la note de bas de page</span></p>
+<p>Une footnote<span id="fn1" class="footnote" style="white-space: pre-line;" data-pagedown-footnote-number="1">contenu de la note de bas de page</span></p>
 </div>
 <div id="un-graphique-inséré-par-r-markdown" class="section level2 custom-class">
 <h2>Un graphique inséré par R Markdown</h2>
